--- a/src/assets/styles/_aboutBody.sass
+++ b/src/assets/styles/_aboutBody.sass
@@ -13,7 +13,7 @@
   @media all and (max-width: 600px) and (orientation: portrait)
     top: -180px
   @media all and (max-width: 700px) and (orientation: landscape)
-    top: -300px
+    top: -420px
 
 .about-text
   display: block
