--- a/src/assets/styles/_codeBody.sass
+++ b/src/assets/styles/_codeBody.sass
@@ -6,6 +6,8 @@
     font-family: var(--primary-font)
     font-size: 2em
     margin-bottom: 1vh
+  @media all and (orientation: portrait)
+    width: 95vw
 
 .code-list-top
   display: inline-flex
@@ -24,7 +26,7 @@
 .code-card-contents
   width: 35%
   background-color: var(--design-icon-background)
-  margin: 2vh 2vw 2vh 2vw
+  margin: 2vh 4vw 2vh 4vw
   @media all and (orientation: portrait)
     width: 45%
 
